--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <title>World!</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="scss/main.scss" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-  <h1>World!</h1>
+  <h1>Hello!</h1>
+  <script src="script.js"></script>
 </body>
+
 </html>
