idek if this works

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,25 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>StudBud</title>
   <link href="scss/main.scss" rel="stylesheet" type="text/css" />
+  
+  <!-- CDN Links for Icon -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://cdnjs.cloudfare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 
 <body>
-  <h1>Hello!</h1>
+  <!-- Dictionary, using API -->
+  <div class="wrapper">
+    <header>English Dictionary</header>
+  </div>
+  
+  </script>
+
+  
+
+
   <script src="script.js"></script>
 </body>
 
