following tutororial to add dictionary api

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,19 @@
   <!-- Dictionary, using API -->
   <div class="wrapper">
     <header>English Dictionary</header>
+    <div class="search">
+      <input type="text" placeholder="Search a word">
+      <i class="fas fa-search"></i>
+      <span class="material-icons">close</span>
+    </div>
+    <ul>
+      <li class="word">
+        <div class="details">
+          <p></p>
+        </div>
+
+      </li>
+    </ul>
   </div>
   
   </script>
