--- a/public/index.html
+++ b/public/index.html
@@ -6,34 +6,42 @@
   <meta name="viewport" content="width=device-width">
   <title>StudBud</title>
   <link href="scss/main.scss" rel="stylesheet" type="text/css" />
-  
-  <!-- CDN Links for Icon -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://cdnjs.cloudfare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+
+ 
 </head>
 
 <body>
-  <!-- Dictionary, using API -->
-  <div class="wrapper">
-    <header>English Dictionary</header>
-    <div class="search">
-      <input type="text" placeholder="Search a word">
-      <i class="fas fa-search"></i>
-      <span class="material-icons">close</span>
-    </div>
-    <ul>
-      <li class="word">
-        <div class="details">
-          <p></p>
-        </div>
-
-      </li>
-    </ul>
-  </div>
   
+<!-- nav bar -->
+<div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+
+<div style="padding-left:16px">
+  <h2>Responsive Topnav Example</h2>
+  <p>Resize the browser window to see how it works.</p>
+</div>
+
+
   </script>
 
-  
+  <script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+    </script>
+
 
 
   <script src="script.js"></script>
