--- a/public/kanban.html
+++ b/public/kanban.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width">
   <title>StudBud</title>
   <link href="scss/main.scss" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
+
 
  
 </head>
@@ -16,7 +18,7 @@
 <div class="topnav" id="myTopnav">
   <a href="#home" class="active">Home</a>
   <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="stopwatch.html">Stopwatch</a>
   <a href="#about">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
