pomodoro added, still need to fix tis issues

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <a href="#news">News</a>
   <a href="stopwatch.html">Stopwatch</a>
   <a href="#about">About</a>
+  <!-- <a href="music.html">Music Player</a> -->
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
