--- a/public/music.html
+++ b/public/music.html
@@ -10,7 +10,7 @@
 </head>  
 <body>
 
-    <audio src="" id="audio"></audio>
+    <audio src="bensound-inspire.mp3" id="audio/mpeg"></audio>
 
     <div class="music-player">
         <h1 class="music-name">Song One</h1>
@@ -25,12 +25,12 @@
         </div>
 
         <div class="controls">
-            <button class="btn backwards-btn"><img src="images/pre.png" alt=""></button>
+            <button class="btn backwards-btn"><img src="images/Connect and Company LOGO.png" alt=""></button>
             <button class="play-btn pause">
                 <span></span>
                 <span></span>
             </button>    
-            <button class="btn forward-btn"><img src="images/nxt.png" alt=""></button>
+            <button class="btn forward-btn"><img src="images/Connect and Company LOGO.png" alt=""></button>
 
         </div>
 
