--- a/public/stopwatch.html
+++ b/public/stopwatch.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stopwatch</title>
   <link rel="stylesheet" href="stopwatch.css" />
+  <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
 
 </head>
 
@@ -15,10 +16,11 @@
 <!-- nav bar -->
 <div class="topnav" id="myTopnav">
     <a class="logo" href="index.html">
-      <img alt="stud bud logo" src="stud.bud.png" width="150" height="40">
-    <a href="index.html">Kanban</a>
+      <img alt="stud bud logo" src="stud.bud.png" width="110" height="30">
     <a href="stopwatch.html">Stopwatch</a>
+    <a href="pomodoro.html">Pomodoro Timer</a>
     <a href="dictionary.html">Dictionary</a>
+    <a href="music.html">Music Payer</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
