--- a/public/stopwatch.html
+++ b/public/stopwatch.html
@@ -50,6 +50,7 @@
       00:00:00
     </div>
     
+    <!-- different button controls for the stopwatch -->
     <div class="controls">
       <button id="start">Start</button> 
       <button id="stop">Stop</button>
