adding code comments

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 <body>
   
 <!-- nav bar -->
+<!-- redirects to all the different pages -->
 <div class="topnav" id="myTopnav">
   <a class="logo" href="index.html">
     <img alt="stud bud logo" src="stud.bud.png" width="110" height="30">
@@ -27,8 +28,8 @@
   </a>
 </div>
 
-<div style="padding-left:16px">
-</div>
+<!-- <div style="padding-left:16px">
+</div> -->
 
 
 <script>
@@ -59,7 +60,7 @@
     <input type="submit" value="Add Todo" id="todo_submit" />
   </div>
 </div>
-<!-- todo -->
+<!-- todo list, creating the different columns -->
 <div class="todo-container">
   <div class="status" id="no_status">
     <h1>Tasks</h1>
