--- a/public/music.html
+++ b/public/music.html
@@ -41,7 +41,9 @@
       </script>
   <!-- Nav bar end -->
 
-    <audio src="audio/OSD.mp3" type="audio/mpeg"></audio>
+    <audio>
+        <source src="audio/OSD.mp3" type="audio/mpeg">
+    </audio>
 
     <div class="music-player">
         <h1 class="music-name">One Summer's Day - Lofi</h1>
