finishing off readme and other small things

--- a/public/dictionary.html
+++ b/public/dictionary.html
@@ -43,9 +43,9 @@
       }
       </script>
 </header>
-
 <!-- nav bar end -->
 
+<!-- dictionary start -->
     <div class="wrapper">
         <div class="content">
             <h2>English Dictionary</h2>
@@ -63,6 +63,7 @@
             </div>
         </div>
     </div>
+<!-- dictionary end -->
 
     <script src="dictionary.js"></script>
 </body>
