--- a/public/pomodoro.html
+++ b/public/pomodoro.html
@@ -63,6 +63,7 @@
       <button class="pause">&nbsp;</button>
     </figure>
 
+    <!-- interacteable elements of teh pomodoro -->
     <form action=".">
       <label for="focusTime">Focus Time</label>
       <input type="number" value="1" id="focusTime" />
